# mtakagishi-template

./: LICENSE  README.md  build.sh  netlify.toml  pyproject.toml  requirements.txt  setup.py  sphinx-autobuild.bat
docs/: about.rst  conf.py  genindex.rst  index.rst  todos.rst
docs/locale/ar/LC_MESSAGES/: about.po  genindex.po  index.po  todos.po
docs/locale/ar/LC_MESSAGES/ref/: index.po  list.po  markdown.po  strike.po  timeline.po
docs/locale/de/LC_MESSAGES/: about.po  genindex.po  index.po  todos.po
docs/locale/de/LC_MESSAGES/ref/: index.po  list.po  markdown.po  strike.po  timeline.po
docs/locale/en/LC_MESSAGES/: about.po  genindex.po  index.po  todos.po
docs/locale/en/LC_MESSAGES/ref/: index.po  list.po  markdown.po  strike.po  timeline.po
docs/locale/eo/LC_MESSAGES/: about.po  genindex.po  index.po  todos.po
docs/locale/eo/LC_MESSAGES/ref/: index.po  list.po  markdown.po  strike.po  timeline.po
docs/locale/es/LC_MESSAGES/: about.po  genindex.po  index.po  todos.po
docs/locale/es/LC_MESSAGES/ref/: index.po  list.po  markdown.po  strike.po  timeline.po
docs/locale/hi/LC_MESSAGES/: about.po  genindex.po  index.po  todos.po
docs/locale/hi/LC_MESSAGES/ref/: index.po  list.po  markdown.po  strike.po  timeline.po
docs/locale/ja/LC_MESSAGES/: about.po  genindex.po  index.po  todos.po
docs/locale/ja/LC_MESSAGES/ref/: index.po  list.po  markdown.po  strike.po  timeline.po
docs/locale/zh/LC_MESSAGES/: about.po  genindex.po  index.po  todos.po
docs/ref/: index.rst  list.rst  strike.rst  timeline.rst
static/: ads.txt  index.html  robots.txt
(+5 files in other folders)
