[tool.poetry]
name = "mtakagishi-template"
version = "0.1.0"
description = ""
authors = ["mtakagishi <mtakagishi+github@gimail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydata-sphinx-theme = "^0.13.3"

[tool.poetry.dev-dependencies]
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
