[tool.poetry]
name = "mtakagishi-template"
version = "0.1.0"
description = ""
authors = ["mtakagishi <mtakagishi+github@gimail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydata-sphinx-theme = "^0.13.3"
myst-parser = "^1.0.0"
sphinxcontrib-blockdiag = "^3.0.0"

[tool.poetry.dev-dependencies]
sphinx-autobuild = "^2021.3.14"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
